--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.67.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
