--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query": "^5.67.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -36,7 +36,8 @@
     "react-tooltip": "^4.5.1",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tanstack": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
