--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^4.5.1",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
